Refactor index.html to simplify structure
Removed unused sections and updated cart message.

--- a/index.html
+++ b/index.html
@@ -7,49 +7,30 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header>
+    <h1>🍔 Online Food Ordering System</h1>
+  </header>
 
-<header>
-  <h1>🍔 Online Food Ordering System</h1>
-</header>
+  <main>
+    <section class="menu-section">
+      <h2>Menu</h2>
+      <div class="menu-grid" id="menuGrid">
+        <!-- Food items will go here dynamically -->
+      </div>
+    </section>
 
-<main>
-  <!-- Menu Section -->
-  <section class="menu-section">
-    <h2>Menu</h2>
-    <div class="category-buttons">
-      <button onclick="filterCategory('All')">All</button>
-      <button onclick="filterCategory('Pizza')">Pizza</button>
-      <button onclick="filterCategory('Burger')">Burger</button>
-      <button onclick="filterCategory('Drinks')">Drinks</button>
-      <button onclick="filterCategory('Dessert')">Dessert</button>
-    </div>
-    <div class="menu-grid" id="menuGrid"></div>
-  </section>
+    <section class="cart-section">
+      <h2>Your Cart</h2>
+      <div id="cartItems">No items added yet.</div>
+      <p id="totalPrice">Total: $0.00</p>
+      <button id="checkoutBtn">Checkout</button>
+    </section>
+  </main>
 
-  <!-- Cart Section -->
-  <section class="cart-section">
-    <h2>Your Cart</h2>
-    <div id="cartItems">No items in cart yet.</div>
-    <p id="totalPrice">Total: $0.00</p>
-    <button id="checkoutBtn">Checkout</button>
-  </section>
-</main>
+  <footer>
+    <p>© 2026 Online Food Ordering System</p>
+  </footer>
 
-<!-- Checkout Modal -->
-<div id="checkoutModal" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <h2>Order Summary</h2>
-    <div id="orderSummary"></div>
-    <p id="finalTotal"></p>
-    <button onclick="payNow()">Pay Now 💳</button>
-  </div>
-</div>
-
-<footer>
-  <p>© 2026 Online Food Ordering System</p>
-</footer>
-
-<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
