Fix header title in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🍔 Online Food Ordering System</h1>
+    <h1>🍔 Online Food Ordering</h1>
   </header>
 
   <main>
@@ -34,3 +34,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
